<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="461dp">

            <TextView
                android:id="@+id/starttxt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/StartStation"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/startstationtxt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#ff0000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/destitxt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/DitsiStation"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/destistationtxt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#ff0000"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="439dp">

            <TextView
                android:id="@+id/taketime"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/TakeTime"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/taketimetxt"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/stationnum"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/StationNumber"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/stationnumtxt"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/transstation"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/TransferStationNumber"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/transstationtxt"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="17sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/stationviewdetail"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/StationViewDetail"
            android:textSize="25sp"
            android:gravity="center_vertical" />

        <ListView
            android:id="@+id/StationGruop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"></ListView>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>