<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.example.jeongjimin.mysubway.BackgroundView
        android:id="@+id/backgroundView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="255dp" />

    <Button
        android:id="@+id/PathFindButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="296dp"
        android:onClick="onClick"
        android:text="@string/PathFind"
        app:layout_constraintEnd_toEndOf="@+id/backgroundView"
        app:layout_constraintStart_toStartOf="@+id/backgroundView"
        app:layout_constraintTop_toTopOf="@+id/backgroundView" />

    <Button
        android:id="@+id/SubwayMapButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="@string/SubwayMap"
        app:layout_constraintEnd_toEndOf="@+id/backgroundView"
        app:layout_constraintStart_toStartOf="@+id/backgroundView"
        app:layout_constraintTop_toBottomOf="@+id/PathFindButton" />

    <Button
        android:id="@+id/ExitButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="@string/Exit"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SubwayMapButton"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>